# codex-pet-desktop

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
docs/: index.html
scripts/: build-app.js  build-petpacks.js  build-variant.js  cargo-cache-fingerprint.js  check-release-tag.js  format-pet-json.js  petpack-zip.js  prepare-care-pet-assets.py  qa-petpack-assets.js  release-scope.js  render-download-page.js  render-visual-qa-page.js  run-check.js  run-smoke.js
src/: build-app-config-smoke.js  cargo-cache-fingerprint-smoke.js  check-runner-smoke.js  download-page-smoke.js  english-only-smoke.js  main.js  pet-json-format-smoke.js  petpack-builder-smoke.js  petpack-qa-smoke.js  petpack-size-budget-smoke.js  pets.js  preload.js  release-scope-smoke.js  release-tag-smoke.js  renderer-behavior-config-smoke.js  renderer-care-interaction-smoke.js  renderer-care-states-smoke.mjs  renderer-chinese-smoke.js  renderer-direction-smoke.js  renderer-edge-behavior-smoke.js  renderer-empty-smoke.js  renderer-empty-window-layout-smoke.js  renderer-english-smoke.js  renderer-first-run-store-smoke.js  renderer-import-cache-smoke.js  renderer-life-engine-smoke.mjs  renderer-life-integration-smoke.js  renderer-manager-smoke.js  renderer-natural-behavior-smoke.js  renderer-panel-close-layout-smoke.js  renderer-panel-tabs-smoke.js  renderer-petpack-helpers-smoke.mjs  renderer-settings-smoke.js  (+22 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pet_catalog.rs  petpack.rs  preferences.rs  sprite_quality.rs  tray.rs  windowing.rs
(+29 files in other folders)
