[package]
name = "biruzik-desktop"
version = "0.2.33"
description = "Standalone desktop pet app for the Internet Immortality Project."
authors = ["Denis Onosov (ODV999)"]
license = "MIT"
repository = "https://github.com/donosov999-ai/codex-pet-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "codex_pet_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "biruzik-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tauri = { version = "2.11.2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico", "protocol-asset"] }
tauri-plugin-opener = "2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["webp"] }
